kubernetes/tailscale/secret-oauth.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tailscale-operator
