kubernetes/tailscale/netpol-operator-fixed.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: tailscale-operator-egress-fixed
  namespace: kube-system
spec:
  endpointSelector:
    matchLabels:
      app: operator
  egress:
    # Allow DNS to CoreDNS
    - toEndpoints:
        - matchLabels:
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
          rules:
            dns:
              - matchPattern: "*"
    # Allow Kubernetes API server
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
    # Allow all other egress for now
    - {}
